config/kubernetes/ingresses/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: backend-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
#   - host: hello-world.info # host doesn't matter
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
            target
